fixed responsive layout issues with bar chart

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,3 +5,7 @@
 .tag-pill{
   cursor:pointer;
 }
+
+.home-page {
+  padding-top: 70px;
+}
